--- a/Calc.css
+++ b/Calc.css
@@ -24,8 +24,10 @@ h2{
     border: solid black 0.5px;
     color: black;
     border-radius: 5px;
-    width: 100%;
-    height: 65%;
+    width: 98%;
+    height: 60%;
+    text-align: end;
+    font-size: 22px;
 }
 #btn {
     background-color: rgb(243, 231, 217);
@@ -37,7 +39,7 @@ input {
     border: solid black 0.5px;
     width: 100%;
     border-radius: 5px;
-    height: 70%;
+    height: 65%;
     outline: none;
 }
 input:active {
